--- a/probprog2021/talk.sty
+++ b/probprog2021/talk.sty
@@ -1,23 +1,3 @@
-\newcommand{\mathbb}[1]{{\mathbf{#1}}}
-
-
-
-% \usepackage{fontspec}
-%\setmainfont[Ligatures=TeX]{LucidaBright}
-% \setsansfont{Optima} % LucidaSans
-% \setmonofont{Menlo} % LucidaSansTypewriter}
-
-\usepackage{mathpazo}
-
-% \setmathrm{LucidaNewMath} % [⟨font features⟩]
-% \setmathsf{LucidaSans} % [⟨font features⟩]
-% \setmathtt{LucidaSansTypewriter} % [⟨font features⟩]
-%\setboldmathrm{⟨font name⟩}[⟨font features⟩]
-% \newfontfamily\chapfont{LucidaBright}
-% \newfontfamily\secfont{LucidaBright}
-% \newfontfamily\handfont{LucidaHandwriting}
-
-
 \IfFileExists{lucimatx.sty}{
   % ----- if Lucida availalable------------------
   \usepackage[
@@ -32,8 +12,6 @@
 }
 % \usepackage{helvet}
 
-
-
 \usepackage{fancyvrb}
 \usepackage{amsmath}
 % \usepackage{amssymb}
@@ -43,8 +21,8 @@
 \usepackage[pagebackref,pdfpagelabels,plainpages=false,hypertexnames=true,colorlinks=true,linkcolor=linkcolor,anchorcolor=linkcolor,citecolor=linkcolor,filecolor=linkcolor,menucolor=linkcolor,runcolor=linkcolor,urlcolor=linkcolor,pdfborder={0 0 0}]{hyperref}
 
 
+\setlength{\paperwidth}{4.2in}
 \setlength{\paperheight}{3in}
-\setlength{\paperwidth}{4in}
 \pdfpagewidth=\paperwidth
 \pdfpageheight=\paperheight
 
@@ -55,7 +33,7 @@
 \setlength{\evensidemargin}{-1.0in}
 \setlength{\topmargin}{-1.25in}
 
-\newcommand{\sld}[1]{\newpage{\noindent\Large \ \ \
+\newcommand{\sld}[1]{\newpage{\noindent\LARGE \ \ \
     \textcolor{MidnightBlue}{\bfseries #1}}\vspace*{4pt}\normalsize}
 
 \newcommand{\code}[1]{{\tt #1}}
@@ -80,7 +58,7 @@
 \newcommand{\mypart}[2]{{\newpage
     \mbox{ }
     \vfill
-    \noindent\spc\color{MidnightBlue}{\Large\bfseries #1\\[10pt]\spc\huge{#2}}
+    \noindent\spc\color{MidnightBlue}{\LARGE\bfseries #1\\[10pt]\spc\Huge{#2}}
     \vfill\vfill}
   \mbox{ }}
 
